--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
     </section>
   </main>
 
-  <script src="script.js"></script>
+  <script type="module">
+  import { initializeApp } from './js/main.js';
+  initializeApp();
+</script>
 </body>
 </html>
