--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
       <label>
         Weather:
         <select id="weatherSelect">
-          <option value="">-- Select Weather --</option>
+          <option value="typical" selected>Typical</option>
           <option value="clear">Clear</option>
-          <option value="typical">Typical</option>
         </select>
       </label>
 
@@ -36,6 +35,13 @@
           <option value="">-- Select Hex --</option>
         </select>
       </label>
+
+      <div class="checkbox-container">
+        <label>
+          <input type="checkbox" id="maintainConditionCheck">
+          Maintain condition
+        </label>
+      </div>
 
       <button id="rollButton" disabled>Roll for Watch</button>
     </section>
