--- a/index.html
+++ b/index.html
@@ -3,21 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Avernus Encounter Roller</title>
+  <title>Avernus Hex Crawler</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <main>
-    <h1>Avernus Encounter Roller</h1>
+    <h1>Avernus Hex Crawler</h1>
 
     <section class="form-controls">
-      <label>
-        Weather:
-        <select id="weatherSelect">
-          <option value="typical" selected>Typical</option>
-          <option value="clear">Clear</option>
-        </select>
-      </label>
+      <div class="weather-control-group">
+        <label>
+          Weather:
+          <select id="weatherSelect">
+            <option value="typical" selected>Typical</option>
+            <option value="clear">Clear</option>
+          </select>
+        </label>
+        <button id="weatherRollButton" type="button" class="small-button">Roll (1d6)</button>
+      </div>
 
       <label>
         Watch Type:
@@ -50,6 +53,9 @@
       <!-- Results will go here -->
     </section>
   </main>
+
+  <!-- Toast notification container -->
+  <div id="toastContainer"></div>
 
   <script type="module">
   import { initializeApp } from './js/main.js';
