--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="checkbox-container">
         <label>
           <input type="checkbox" id="maintainConditionCheck">
-          Maintain condition
+          Maintain Condition
         </label>
       </div>
 
