--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="dark-mode-toggle">
+    <button id="darkModeToggle" aria-label="Toggle dark mode">
+      <span id="darkModeIcon">🌙</span>
+    </button>
+  </div>
   <main>
     <h1>Avernus Hex Crawler</h1>
 
