--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <option value="clear">Clear</option>
               </select>
             </label>
-            <button id="weatherRollButton" type="button" class="small-button">Roll (1d6)</button>
+            <button id="weatherRollButton" type="button" class="small-button">Roll for Weather</button>
           </div>
           
           <div class="form-group">
