Added Styx checkbox and updated Watch types

--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
               Watch Type:
               <select id="watchSelect">
                 <option value="">-- Select Watch Type --</option>
-                <option value="active">Active</option>
+                <option value="travel">Travel/Exploration</option>
                 <option value="rest">Rest</option>
-                <option value="travel">Travel</option>
               </select>
             </label>
           </div>
@@ -52,6 +51,14 @@
             </label>
           </div>
           
+          <div class="form-group">
+            <div class="checkbox-container">
+              <label>
+                <input type="checkbox" id="followingStyxCheck">
+                Following Styx
+              </label>
+            </div>
+          </div>
           <div class="form-group">
             <div class="checkbox-container">
               <label>
