--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                 <option value="">-- Select Hex --</option>
               </select>
             </label>
+            <button id="revealAllLocationsButton" type="button" class="small-button" disabled>Reveal Hex Locations</button>
           </div>
           
           <div class="form-group">
