--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               Watch Type:
               <select id="watchSelect">
                 <option value="">-- Select Watch Type --</option>
-                <option value="travel">Travel/Exploration</option>
+                <option value="travel">Travel</option>
                 <option value="rest">Rest</option>
               </select>
             </label>
@@ -57,6 +57,14 @@
               <label>
                 <input type="checkbox" id="followingStyxCheck">
                 Following Styx
+              </label>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="checkbox-container">
+              <label>
+                <input type="checkbox" id="explorationModeCheck">
+                Exploration Mode
               </label>
             </div>
           </div>
