--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="options-grid">
         <div class="column">
           <div class="form-group">
-            <label>
+            <label title="Clear Weather increases visibility and doubles certain Encounter distances">
               Weather:
               <select id="weatherSelect">
                 <option value="typical" selected>Typical</option>
@@ -30,7 +30,7 @@
           </div>
           
           <div class="form-group">
-            <label>
+            <label title="Rest watches do not generate Tracks or Lair Encounters">
               Watch Type:
               <select id="watchSelect">
                 <option value="">-- Select Watch Type --</option>
@@ -54,7 +54,7 @@
           
           <div class="form-group">
             <div class="checkbox-container">
-              <label>
+              <label title="While checked, Styx Encounters have a chance of occurring and River Locations are revealed automatically">
                 <input type="checkbox" id="followingStyxCheck">
                 Following Styx
               </label>
@@ -62,7 +62,7 @@
           </div>
           <div class="form-group">
             <div class="checkbox-container">
-              <label>
+              <label title="While checked, Encounters are twice as likely to occur and Locations are twice as likely to appear">
                 <input type="checkbox" id="explorationModeCheck">
                 Exploration Mode
               </label>
@@ -70,7 +70,7 @@
           </div>
           <div class="form-group">
             <div class="checkbox-container">
-              <label>
+              <label title="While checked, the active Oppressive Condition will remain active until a Watch Roll deactivates it">
                 <input type="checkbox" id="maintainConditionCheck">
                 Maintain Condition
               </label>
