Adding Shummrath checkbox

--- a/index.html
+++ b/index.html
@@ -62,6 +62,14 @@
           </div>
           <div class="form-group">
             <div class="checkbox-container">
+              <label title="While checked, Pit of Shummrath Locations are revealed automatically">
+                <input type="checkbox" id="followingPitCheck">
+                Following Pit of Shummrath
+              </label>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="checkbox-container">
               <label title="While checked, Encounters are twice as likely to occur and Locations are twice as likely to appear">
                 <input type="checkbox" id="explorationModeCheck">
                 Exploration Mode
